k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee
  labels:
    enviornment: development
    project: employee-api
    managed-by: kubectl
