k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: employee-api
  namespace: employee

  labels:
    app: employee-api
    tier: backend
    environment: development

spec:
  containers:
  - name: employee-api
    image: employee-api:v199
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 5000
