k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-api
  namespace: employee

spec:
  ingressClassName: nginx

  rules:
    - host: employee.local

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: employee-api

                port:

                  number: 80
