k8s/networkpolicy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-nginx

  namespace: employee

spec:

  podSelector:

    matchLabels:

      app: employee-api

  ingress:

  - from:

    - namespaceSelector:

        matchLabels:

          kubernetes.io/metadata.name: ingress-nginx

  policyTypes:

  - Ingress
