k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: employee

spec:

  podSelector: {}

  policyTypes:

  - Ingress

  - Egress
